// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas de GifGrid Debe de mostrar items cuando se cargan imagenes useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    One Punch
     
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="4N5vB4aErlVtVsywBw"
      key="4N5vB4aErlVtVsywBw"
      title="bizzare GIF"
      url="https://giphy.com/gifs/jojo-bizzare-cruisaders-4N5vB4aErlVtVsywBw"
    />
  </div>
</Fragment>
`;

exports[`Pruebas de GifGrid Debe mostrar <GifGrid/> correctamente correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    One Punch
     
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
